
5.1.0 -> 5.2a0:
    - proyvind: install headers required by other installed headers. (FIXME!)
    - proyvind: unbreak rpm4compat.h wrt c++ function overrides.
    - proyvind: fix pointer type mismatch with 64 bit in glob.c.
    - proyvind: fix a couple of compile warnings in python bindings.
    - proyvind: remove references in autotools to removed files.
    - rse: upgrade build environment to GNU libtool 2.2.6
    - jbj: lua: fix: don't unlink a non-existent scriptlet file.
    - jbj: display error msg for lusers attempting "rpm -qp /bin" (#461362).
    - jbj: WR: remove version from config paths.
    - jbj: lua: fix: don't close dup'd stdout running lua scripts.
    - jbj: macosx: avoid multiple definitions of _program_name.
    - rse: upgrade embedded Lua from version 5.1.3 to 5.1.4
    - jbj: WR: remove --with-path-versioned in devtool targets.
    - jbj: WR: remove $(VERION) from macros paths in devtool targets.
    - jbj: WR: add devtool windriver-{host,target} configuration targets.
    - jbj: WR: fix: cleanup patch integration thinkos.
    - jbj: WR: mark wrs-rpm-enable-macro-validation.patch (but leave disabled).
    - jbj: WR: fix: add rt-reloc-wrapper.sh to EXTRAS_DIST.
    - jbj: rescusitate w make distcheck.
    - jbj: update po files.
    - jbj: adopt AM_PATH_PYTHON AutoFu variables. AM_PATH_PYTHON will be used eventually.
    - rse: simplify conditional code and remove compile-time warnings in rpmio/rpm{nss,gc,ssl}.c
    - jbj: python: simplify Makefile.am
    - jbj: display sysinfo path with --showrc.
    - jbj: remove internal zlib.
    - jbj: WR: eliminate most compiler warnings.
    - jbj: WR: eliminate duplicated AutoFu boilerplate, use system.h instead.
    - jbj: WR: eliminate getdate.[ch], use same from rpmio instead.
    - jbj: WR: eliminate dueling AutoFu defines from shadow_config.h, use RPM's
	config.h (through system.h) instead.
    - jbj: WR: eliminate xmalloc.c, use system.h defines instead.